# rr1_control

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: tests.yaml  tests_grip.yaml
launch/: test_forward_position_controller.launch.py  test_forward_position_controller_launch.py  test_joint_trajectory_controller.launch.py  test_joint_trajectory_controller_launch.py
rr1_control/: controller_test.py
scripts/: angles_converter.py  forward_position_command.py  switch_controllers.py  test_forward_position_controller.py  test_joint_trajectory_controller.py
