<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rr1_control</name>
  <version>0.0.0</version>
  <description>ROS2 package for desktop robotic arm RR1 containing the control implementation.</description>
  <maintainer email="chudyja1@fit.cvut.cz">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <buildtool_depend>ament</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>